fix some bugs and update schema
Co-Authored-By: Rashida5 <99291528+Rashida5@users.noreply.github.com>